syntax = "proto3";

package greet;

option go_package = "/pb";

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
}

message GreetRequest {
  string greeting = 1;
}

message GreetResponse {
  string result = 1;
}